--- a/ig/carecommunicationtestscripts/testexamples.html
+++ b/ig/carecommunicationtestscripts/testexamples.html
@@ -221,8 +221,8 @@ and</li>
       <td>A new CareCommunication. Instance IDs are not UUIDs. ContentString includes line breaks (<br/>).</td>
     </tr>
     <tr>
-      <td><a href="./Bundle-77c771ca-05d6-4efb-9a74-2fc513787f3a.html">CareCommunication_Ex_send-K-reply</a></td>
-      <td>A reply CareCommunication.</td>
+      <td><a href="./Bundle-77c771ca-05d6-4efb-9a74-2fc513787f3a.html">CareCommunication_Ex_send-K-forward</a></td>
+      <td>A forward CareCommunication.</td>
     </tr>
     <tr>
       <td><a href="./Bundle-b43146a2-99ec-4b05-bb8f-5b44af4fe424.html">CareCommunication_Ex_send-Tek-A-new-episodeOfCare</a></td>
