Fix Logo on History Page and template

--- a/ig/messagedefinitions/history.html
+++ b/ig/messagedefinitions/history.html
@@ -39,8 +39,8 @@
       </a>
     </div>
     <div id="family-nav">
-      <a id="fhir-logo" no-external="true" href="http://hl7.dk"><img height="50" style="margin-top: 15px;" alt="HL7 Denmark" src="assets/images/fire.png"/> </a>
-        </a>
+      <a id="fhir-logo" no-external="true" href="http://hl7.dk">
+        <img height="50" style="margin-top: 15px;" alt="HL7 Denmark" src="assets-hist/images/fhir-logo.png"/> </a>
     </div>    
     
    <div id="ig-status" style="font-size:24px;padding-top: 20px;">
